syntax = "proto3";

package ru.ibs.reactorgrpc.stubs;

import "google/protobuf/empty.proto";

option java_package = "ru.ibs.reactorgrpc.stubs";
option java_multiple_files = true;



message BrokeResponse{
  int64 num = 1;
}


service BrokeBackPressureService{
  rpc brokeBackPressure(google.protobuf.Empty)returns(stream BrokeResponse);
}


